<?xml version="1.0"?>
<package format="3">
    <name>mdds30_ros2_controller</name>
    <version>0.1.0</version>
    <description>ROS 2 controller for Cytron MDDS30 (serial simplified mode)</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>